LLVM.Imports.Core.pas


    LLVMInstructionValueKind,
    LLVMPoisonValueValueKind,
    LLVMConstantTargetNoneValueKind,
    LLVMConstantPtrAuthValueKind
  );

  TLLVMIntPredicate = (
    LLVMIntEQ = 32, //**< equal */
    LLVMIntNE,      //**< not equal */
    LLVMIntUGT,     //**< unsigned greater than */
    LLVMIntUGE,     //**< unsigned greater or equal */
    LLVMIntULT,     //**< unsigned less than */
    LLVMIntULE,     //**< unsigned less or equal */
    LLVMIntSGT,     //**< signed greater than */
    LLVMIntSGE,     //**< signed greater or equal */
    LLVMIntSLT,     //**< signed less than */
    LLVMIntSLE      //**< signed less or equal */
  );

  TLLVMRealPredicate = (
    LLVMRealPredicateFalse, //**< Always false (always folded) */
    LLVMRealOEQ,            //**< True if ordered and equal */
    LLVMRealOGT,            //**< True if ordered and greater than */
    LLVMRealOGE,            //**< True if ordered and greater than or equal */
    LLVMRealOLT,            //**< True if ordered and less than */
    LLVMRealOLE,            //**< True if ordered and less than or equal */
    LLVMRealONE,            //**< True if ordered and operands are unequal */
    LLVMRealORD,            //**< True if ordered (no nans) */
    LLVMRealUNO,            //**< True if unordered: isnan(X) | isnan(Y) */
    LLVMRealUEQ,            //**< True if unordered or equal */
    LLVMRealUGT,            //**< True if unordered or greater than */
    LLVMRealUGE,            //**< True if unordered, greater than, or equal */
    LLVMRealULT,            //**< True if unordered or less than */
    LLVMRealULE,            //**< True if unordered, less than, or equal */
    LLVMRealUNE,            //**< True if unordered or not equal */
    LLVMRealPredicateTrue   //**< Always true (always folded) */
  );

  TLLVMThreadLocalMode = (
    LLVMNotThreadLocal = 0,
    LLVMGeneralDynamicTLSModel,
    LLVMLocalDynamicTLSModel,
    LLVMInitialExecTLSModel,
    LLVMLocalExecTLSModel
  );

  TLLVMAtomicOrdering = (
    LLVMAtomicOrderingNotAtomic = 0, //**< A load or store which is not atomic */
    LLVMAtomicOrderingUnordered = 1, //**< Lowest level of atomicity, guarantees somewhat sane results, lock free. */
    LLVMAtomicOrderingMonotonic = 2, //**< guarantees that if you take all the operations affecting a specific address, a consistent ordering exists */
    LLVMAtomicOrderingAcquire = 4, //**< Acquire provides a barrier of the sort necessary to acquire a lock to access other memory with normal loads and stores. */
    LLVMAtomicOrderingRelease = 5, //**< Release is similar to Acquire, but with a barrier of the sort necessary to release a lock. */
    LLVMAtomicOrderingAcquireRelease = 6, //**< provides both an Acquire and a Release barrier (for fences and operations which both read and write memory). */
    LLVMAtomicOrderingSequentiallyConsistent = 7 //**< provides Acquire semantics for loads and Release semantics for stores. Additionally, it guarantees that a total ordering exists between all SequentiallyConsistent operations. */
  );

  TLLVMAtomicRMWBinOp = (
    LLVMAtomicRMWBinOpXchg, //**< Set the new value and return the one old */
    LLVMAtomicRMWBinOpAdd,  //**< Add a value and return the old one */
    LLVMAtomicRMWBinOpSub,  //**< Subtract a value and return the old one */
    LLVMAtomicRMWBinOpAnd,  //**< And a value and return the old one */
    LLVMAtomicRMWBinOpNand, //**< Not-And a value and return the old one */
    LLVMAtomicRMWBinOpOr,   //**< OR a value and return the old one */
    LLVMAtomicRMWBinOpXor,  //**< Xor a value and return the old one */
    LLVMAtomicRMWBinOpMax,  //**< Sets the value if it's greater than the original using a signed comparison and return the old one */
    LLVMAtomicRMWBinOpMin,  //**< Sets the value if it's Smaller than the original using a signed comparison and return the old one */
    LLVMAtomicRMWBinOpUMax, //**< Sets the value if it's greater than the original using an unsigned comparison and return the old one */
    LLVMAtomicRMWBinOpUMin, //**< Sets the value if it's greater than the original using an unsigned comparison  and return the old one */
    LLVMAtomicRMWBinOpFAdd, //**< Add a floating point value and return the old one */
    LLVMAtomicRMWBinOpFSub,  //**< Subtract a floating point value and return the old one */
    LLVMAtomicRMWBinOpFMax, (**< Sets the value if it's greater than the
                             original using an floating point comparison and
                             return the old one *)
    LLVMAtomicRMWBinOpFMin, (**< Sets the value if it's smaller than the
                             original using an floating point comparison and
                             return the old one *)
    LLVMAtomicRMWBinOpUIncWrap, (**< Increments the value, wrapping back to zero
                                 when incremented above input value *)
    LLVMAtomicRMWBinOpUDecWrap, (**< Decrements the value, wrapping back to
                                 the input value when decremented below zero *)
    LLVMAtomicRMWBinOpUSubCond, (**<Subtracts the value only if no unsigned
                                   overflow *)
    LLVMAtomicRMWBinOpUSubSat,  (**<Subtracts the value, clamping to zero *)
    LLVMAtomicRMWBinOpFMaximum, (**< Sets the value if it's greater than the
                                original using an floating point comparison and
                                return the old one *)
    LLVMAtomicRMWBinOpFMinimum  (**< Sets the value if it's smaller than the
                                original using an floating point comparison and
                                return the old one *)
  );

  TLLVMDiagnosticSeverity = (
    LLVMDSError,
    LLVMDSWarning,
    LLVMDSRemark,
    LLVMDSNote
  );

  TLLVMInlineAsmDialect = (
    LLVMInlineAsmDialectATT,
    LLVMInlineAsmDialectIntel
  );

  TLLVMModuleFlagBehavior = (
    (**
     * Emits an error if two values disagree, otherwise the resulting value is
     * that of the operands.
     *
     * @see Module::ModFlagBehavior::Error
     *)
    LLVMModuleFlagBehaviorError,
    (**
     * Emits a warning if two values disagree. The result value will be the
     * operand for the flag from the first module being linked.
     *
     * @see Module::ModFlagBehavior::Warning
     *)
    LLVMModuleFlagBehaviorWarning,
    (**
     * Adds a requirement that another module flag be present and have a
     * specified value after linking is performed. The value must be a metadata
     * pair, where the first element of the pair is the ID of the module flag
     * to be restricted, and the second element of the pair is the value the
     * module flag should be restricted to. This behavior can be used to
     * restrict the allowable results (via triggering of an error) of linking
     * IDs with the **Override** behavior.
     *
     * @see Module::ModFlagBehavior::Require
     *)
    LLVMModuleFlagBehaviorRequire,
    (**
     * Uses the specified value, regardless of the behavior or value of the
     * other module. If both modules specify **Override**, but the values
     * differ, an error will be emitted.
     *
     * @see Module::ModFlagBehavior::Override
     *)
    LLVMModuleFlagBehaviorOverride,
    (**
     * Appends the two values, which are required to be metadata nodes.
     *
     * @see Module::ModFlagBehavior::Append
     *)
    LLVMModuleFlagBehaviorAppend,
    (**
     * Appends the two values, which are required to be metadata
     * nodes. However, duplicate entries in the second list are dropped
     * during the append operation.
     *
     * @see Module::ModFlagBehavior::AppendUnique
     *)
    LLVMModuleFlagBehaviorAppendUnique
  );

{//**
 * Attribute index are either LLVMAttributeReturnIndex,
 * LLVMAttributeFunctionIndex or a parameter number from 1 to N.
 */}
  TLLVMAttributeIndex = (
    LLVMAttributeReturnIndex = 0,
    // ISO C restricts enumerator values to range of 'int'
    // (4294967295 is too large)
    // LLVMAttributeFunctionIndex = ~0U,
    LLVMAttributeFunctionIndex = -1
  );

 (* Tail call kind for LLVMSetTailCallKind and LLVMGetTailCallKind.
  *
  * Note that 'musttail' implies 'tail'.
  *
  * @see CallInst::TailCallKind
  *)
  TLLVMTailCallKind = (
    LLVMTailCallKindNone = 0,
    LLVMTailCallKindTail = 1,
    LLVMTailCallKindMustTail = 2,
    LLVMTailCallKindNoTail = 3
  );

(**
 * Flags to indicate what fast-math-style optimizations are allowed
 * on operations.
 *
 * See https://llvm.org/docs/LangRef.html#fast-math-flags
 *)
  TLLVMFastMathFlag = (
    LLVMFastMathAllowReassoc,
    LLVMFastMathNoNaNs,
    LLVMFastMathNoInfs,
    LLVMFastMathNoSignedZeros,
    LLVMFastMathAllowReciprocal,
    LLVMFastMathAllowContract,
    LLVMFastMathApproxFunc
  );

  TLLVMFastMathFlags = set of TLLVMFastMathFlag;

const
  LLVMFastMathNone: TLLVMFastMathFlags = [];
  LLVMFastMathAll: TLLVMFastMathFlags = [
                      LLVMFastMathAllowReassoc,
                      LLVMFastMathNoNaNs,
                      LLVMFastMathNoInfs,
                      LLVMFastMathNoSignedZeros,
                      LLVMFastMathAllowReciprocal,
                      LLVMFastMathAllowContract,
                      LLVMFastMathApproxFunc
                    ];


(**
 * Flags that constrain the allowed wrap semantics of a getelementptr
 * instruction.
 *
 * See https://llvm.org/docs/LangRef.html#getelementptr-instruction
 *)

type
  TLLVMGEPNoWrapFlag = (
    LLVMGEPFlagInBounds,
    LLVMGEPFlagNUSW,
    LLVMGEPFlagNUW
  );

  TLLVMGEPNoWrapFlags = set of TLLVMGEPNoWrapFlag;

  TLLVMDbgRecordKind = (
    LLVMDbgRecordLabel,
    LLVMDbgRecordDeclare,
    LLVMDbgRecordValue,
    LLVMDbgRecordAssign
  );

procedure LLVMShutdown; cdecl; external CLLVMLibrary;

(*===-- Version query -----------------------------------------------------===*)

(**
 * Return the major, minor, and patch version of LLVM
 *
 * The version components are returned via the function's three output
 * parameters or skipped if a NULL pointer was supplied.
 *)
procedure LLVMGetVersion(out Major, Minor, Patch: Cardinal); cdecl; external CLLVMLibrary;

(*===-- Error handling ----------------------------------------------------===*)

function LLVMCreateMessage(const Message: PLLVMChar): PLLVMChar; cdecl; external CLLVMLibrary;
procedure LLVMDisposeMessage(Message: PLLVMChar); cdecl; external CLLVMLibrary;

type
  TLLVMDiagnosticHandler = procedure(DiagnosticInfo: TLLVMDiagnosticInfoRef; UserContext: Pointer); cdecl;
  TLLVMYieldCallback = procedure(Context: TLLVMContextRef; UserContext: Pointer); cdecl;


function LLVMContextCreate: TLLVMContextRef cdecl; external CLLVMLibrary;

function LLVMGetGlobalContext: TLLVMContextRef; cdecl; external CLLVMLibrary; deprecated 'Use of the global context is deprecated, create one using LLVMContextCreate instead';

procedure LLVMContextSetDiagnosticHandler(C: TLLVMContextRef; Handler: TLLVMDiagnosticHandler; DiagnosticContext: Pointer); cdecl; external CLLVMLibrary;

function LLVMContextGetDiagnosticHandler(C: TLLVMContextRef): TLLVMDiagnosticHandler; cdecl; external CLLVMLibrary;

function LLVMContextGetDiagnosticContext(C: TLLVMContextRef): Pointer; cdecl; external CLLVMLibrary;

procedure LLVMContextSetYieldCallback(C: TLLVMContextRef; Callback: TLLVMYieldCallback; OpaqueHandle: Pointer); cdecl; external CLLVMLibrary;

(**
 * Retrieve whether the given context is set to discard all value names.
 *
 * @see LLVMContext::shouldDiscardValueNames()
 *)
function LLVMContextShouldDiscardValueNames(C: TLLVMContextRef): TLLVMBool; cdecl; external CLLVMLibrary;

(**
 * Set whether the given context discards all value names.
 *
 * If true, only the names of GlobalValue objects will be available in the IR.
 * This can be used to save memory and runtime, especially in release mode.
 *
 * @see LLVMContext::setDiscardValueNames()
 *)
procedure LLVMContextSetDiscardValueNames(C: TLLVMContextRef; Discard: TLLVMBool); cdecl; external CLLVMLibrary;

